# CCMACLRL_PROJECT_COM222

./: README.md  pyproject.toml  requirements.txt
data/: dataset-metadata.json
heart_failure_prediction_svm/: app.py  app1.py
models/: 10-18-2024_10=27PM_SVMmodel.pkl  model_name_info.txt
models/model/: 10-22-2024_0437PM_SVMmodel.pkl  10-23-2024_1210AM_SVMmodel.pkl  10-23-2024_1227AM_SVMmodel.pkl  11-01-2024_1057AM_SVMmodel.pkl
models/scaler/: 10-23-2024_1214AM_scaler.pkl  11-01-2024_1154AM_scaler.pkl
notebooks/: Experimental scaling diff.ipynb  Experimental with Sampling Manipulation.ipynb  Experimental with Scaling.ipynb  Experimental with undersampling.ipynb  Experimental without smote&undersampling.ipynb  HFP_SVM.ipynb  sample.ipynb
utils/: fetch_data.py
